# fuxx-media-app

./: .dockerignore  .env.example  .gitignore  IMPLEMENTATION_PLAN.md  Makefile  PHASE_0_1_CONFLICT_REPORT.md  PHASE_0_COMPLETION_REPORT.md  PHASE_1_COMPLETION_REPORT.md  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini
backend/migrations/: env.py
backend/migrations/versions/: 0001_phase_zero_foundation.py  086e30120b92_implement_phase_zero_data_model.py  32df0ee0c2a1_implement_phase_one_intake.py  a4f1c2d3e4f5_implement_phase_two_case_processing.py  b5e6f7a8c9d0_implement_phase_three_provider_foundation.py  c6f7a8b9d0e1_scope_provider_names_to_tenants.py  d7e8f9a0b1c2_implement_block_06_media_assets.py
backend/src/mediaos/: __init__.py  cli.py  config.py  database.py  logging.py  main.py  security.py
backend/src/mediaos/api/: __init__.py  auth.py  auth_routes.py  health.py  phase_one.py  phase_six.py  phase_three.py  phase_two.py  phase_zero.py  schemas.py
backend/src/mediaos/application/: __init__.py  authentication_service.py  callback_service.py  errors.py  (+8 more)
backend/tests/: conftest.py
backend/tests/integration/: provider_helpers.py  test_api_phase_zero.py  test_authentication.py  test_case_processing.py  test_intake.py  test_media_assets.py  test_models.py  test_provider_callbacks.py  test_provider_foundation.py  test_queue.py  test_workflow.py
backend/tests/unit/: test_api_health.py  test_architecture_guard.py  test_config.py  test_media_validation.py  test_provider_adapter.py  test_security.py
docs/: API.md  ARCHITECTURE.md  BLOCK_06_COMPLETION_REPORT.md  CODEX_RULES.md  DATA_MODEL.md  OPERATIONS.md  PHASE_2_COMPLETION_REPORT.md  PHASE_3_COMPLETION_REPORT.md  PROJECT_CONSTITUTION.md  TESTING.md  THREAT_MODEL.md  WORKFLOW.md
docs/ADR/: 0001-modular-monolith.md  0002-phase-zero-workflow-kernel.md  0003-persistent-session-and-intake.md  0004-revision-bound-case-processing.md  0005-provider-outbox-boundary.md  0006-private-versioned-media-lifecycle.md
frontend/: Dockerfile  eslint.config.mjs  next-env.d.ts  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AuthPanel.tsx  CaseWorkspace.tsx  MediaWorkspace.tsx  ProviderWorkspace.tsx  SystemStatus.tsx
frontend/lib/: api.ts
frontend/types/: system.ts
scripts/: __init__.py  check_architecture.py  export_windows_root_ca.ps1
(+16 files in other folders)
