[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mediaos"
version = "0.6.0"
description = "MediaOS modular-monolith technical foundation"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "alembic>=1.14,<2",
  "argon2-cffi>=25.1,<26",
  "asyncpg>=0.30,<1",
  "fastapi>=0.116,<1",
  "email-validator>=2.2,<3",
  "httpx>=0.28,<1",
  "minio>=7.2,<8",
  "psycopg[binary]>=3.2,<4",
  "pydantic-settings>=2.10,<3",
  "python-multipart>=0.0.20,<1",
  "sqlalchemy[asyncio]>=2.0,<2.1",
  "uvicorn[standard]>=0.35,<1",
]

[project.optional-dependencies]
dev = [
  "build>=1.2,<2",
  "mypy>=1.17,<2",
  "pytest>=8.4,<9",
  "pytest-asyncio>=1.1,<2",
  "ruff>=0.12,<1",
]

[tool.setuptools.packages.find]
where = ["backend/src"]

[tool.pytest.ini_options]
addopts = "-q --strict-markers"
asyncio_mode = "auto"
testpaths = ["backend/tests"]
pythonpath = [".", "backend/src"]
markers = ["integration: requires an isolated PostgreSQL database"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["backend/src", "backend/tests", "scripts"]

[tool.ruff.lint]
select = ["B", "E", "F", "I", "SIM", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["backend/src", "scripts/check_architecture.py"]
